# piilo

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  package-lock.json  package.json  vercel.json
circuits/: input_transfer.json  input_withdraw.json  jubjub.circom  package-lock.json  package.json  transfer.circom  withdraw.circom
circuits/test/: input_add.json  input_commit.json  input_mulscalar.json  (+3 more)
contracts/piilo/: Cargo.toml
contracts/piilo/src/: commitment.rs  lib.rs  test.rs  verifier.rs
contracts/piilo/test_snapshots/test/: deposit_creates_account_and_funds_vault.1.json  deposit_requires_user_auth.1.json  fee_is_charged_on_deposit.1.json  fee_is_charged_on_transfer.1.json  fee_is_charged_on_withdraw.1.json  real_circom_transfer_proof_is_accepted.1.json  real_circom_withdraw_proof_is_accepted.1.json  second_deposit_merges_homomorphically.1.json  self_transfer_is_rejected.1.json  settle_pending_merges_and_clears.1.json  settle_pending_without_pending_fails.1.json  single_deposit_fits_real_mainnet_resource_limits.1.json  transfer_accumulates_pending_from_multiple_senders.1.json  transfer_real_cost_measurement.1.json  transfer_with_proof_for_wrong_statement_is_rejected.1.json  transfer_with_valid_proof_updates_sender_and_recipient.1.json  transfer_without_existing_account_fails.1.json  withdraw_more_than_vault_fails.1.json  withdraw_pays_out_and_resets_balance.1.json  withdraw_with_proof_for_wrong_amount_is_rejected.1.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: build-site.sh  deploy.mjs
(+72 files in other folders)
