[package]
name = "piilo"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
ark-bls12-381 = { version = "0.6", default-features = false, features = ["curve"] }
ark-ff = { version = "0.6", default-features = false }
ark-groth16 = { version = "0.6", default-features = false }
ark-relations = { version = "0.6", default-features = false }
ark-std = { version = "0.6", default-features = false, features = ["std"] }
ark-serialize = { version = "0.6", default-features = false }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
